# Kaorii

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json
src/: App.css  App.tsx  ChatInput.tsx  MessageContent.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: ai.rs  config.rs  lib.rs  main.rs  security.rs  window_extra.rs
src/components/Chat/: Chat.module.scss  Chat.tsx
src/components/ChatInput/: ChatInput.module.scss  ChatInput.tsx
src/components/MessageContent/: MessageContent.module.scss  MessageContent.tsx  index.ts
src/components/Settings/: Settings.module.scss  Settings.tsx
src/components/SmallWidget/: SmallWidget.module.scss  SmallWidget.tsx  index.ts
src/components/WindowBar/: WindowBar.module.scss  WindowBar.tsx  index.ts
src/data/: prompts.ts  shortcuts.ts
src/hooks/: useActionFromSelection.ts  useAppActions.ts  useAppInit.ts  useClipboard.ts  useConfig.ts  useDragWindow.ts  useIconPath.ts  useLlamaServer.ts  useModelPath.ts  useScrollToBottom.ts  useShortcut.ts  useShortcutSummarize.ts  useShortcutToggle.ts  useSummarize.ts  useToggleWindow.ts
src/services/: checkServerHealth.ts  sendRequest.ts
src/store/: useAppStore.ts
src/types/: AppConfig.d.ts
src/ui/Icon/: Icon.module.scss  Icon.tsx
src/ui/Loader/: Loader.module.scss  Loader.tsx
src/ui/Modal/: Modal.module.scss  Modal.tsx
src/ui/SettingField/: SettingField.module.scss  SettingField.tsx  index.ts
src/utils/: setupShortcut.ts
