[package]
name = "Kaorii_AI"
version = "1.1.0"
description = "Ypur desktop AI assistent"
authors = ["you"]
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "kaorii_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-clipboard-manager = "2"
enigo = "0.1.2"
tauri-plugin-dialog = "2.0.0"
openrouter-rs = "0.9.0"
tokio = { version = "1", features = ["full"] }
keyring = { version = "3.3.0", features = ["sync-secret-service", "crypto-rust"] }

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18.2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
